Closed Bug 433437 Opened 18 years ago Closed 18 years ago

vfychain ignores the -a option

Categories

(NSS :: Tools, defect, P2)

3.11
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.12.1

People

(Reporter: nelson, Assigned: nelson)

Details

Attachments

(1 file)

vfychain's usage message says that it honors a -a option that means that any cert files named after that in the command line are ASCII (or "PEM") encoded. But today, in all versions of vfychain produced to date, vfychain silently ignores the -a option. vfychain requires all input cert files to be raw binary DER, not PEM. The attached patch fixes this.
Attachment #320630 - Flags: review?(julien.pierre.boogz)
I thought there was already a bug filed on this problem, but I cannot find it. If this is a duplicate, and you know the number of the other bug, please mark that other bug as a duplicate of this one. Merci' :)
Attachment #320630 - Flags: review?(julien.pierre.boogz) → review+
Comment on attachment 320630 [details] [diff] [review] vfychain patch v1 Thanks for the quick review. Checking in vfychain.c; new revision: 1.24; previous revision: 1.23
Status: NEW → RESOLVED
Closed: 18 years ago
Priority: -- → P2
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: