[Bug 433437] vfychain ignores the -a option,  r=julien.pierre